# x7z

./: README.md  settings.gradle.kts
7z/: build.gradle.kts
7z/src/main/Java/: README.md
7z/src/main/Java/SevenZip/Compression/LZMA/: EncoderWrapper.java
7z/src/main/cpp/: CMakeLists.txt  CMakeLists.txt.bak  README.md
7z/tools/: README.md
app/: build.gradle.kts
app/src/androidTest/java/com/sissi/k7z/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/sissi/x7z/demo/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/sissi/k7z/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
